--- a/template/{% if not override_flake8 %}.flake8{% endif %}.jinja
+++ b/template/{% if not override_flake8 %}.flake8{% endif %}.jinja
@@ -13,7 +13,7 @@ extend-exclude =
     ;  dot-prefixed files and folders
     .github
     .pytest_cache
-    .tooling
+    .tools
     .venv
     .vscode
 
