Move template initialization out of tasks

--- a/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
@@ -23,6 +23,13 @@
       "problemMatcher": []
     },
     {
+      "label": "pwsh: Initialize template",
+      "type": "process",
+      "command": "pwsh",
+      "args": [".tools/scripts/init_template.ps1"],
+      "problemMatcher": []
+    },
+    {
       "label": "pwsh: Setup project",
       "type": "process",
       "command": "pwsh",
