--- a/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
@@ -33,14 +33,14 @@
       "label": "pwsh: Setup project",
       "type": "process",
       "command": "pwsh",
-      "args": [".tools/setup.ps1"],
+      "args": [".tools/setup/setup.ps1"],
       "problemMatcher": []
     },
     {
       "label": "pwsh: Update project",
       "type": "process",
       "command": "pwsh",
-      "args": [".tools/update.ps1"],
+      "args": [".tools/setup/update.ps1"],
       "problemMatcher": []
     },
     {
