--- a/template/.tools/setup/setup.ps1.jinja
+++ b/template/.tools/setup/setup.ps1.jinja
@@ -1,4 +1,4 @@
 copier -f -r {{ _commit }}
 Remove-Item .venv -Recurse -ErrorAction SilentlyContinue
 py -{{ python_version }} -m venv .venv --upgrade-deps
-. .tools/update.ps1
+. .tools/setup/update.ps1
