Implement Sourcery config

--- a/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
@@ -62,7 +62,7 @@
     "*.tsx": "${capture}.ts",
     "tsconfig.json": "tsconfig.*.json",
     "package.json": "package-lock.json, yarn.lock",
-    ".nest_tools_config": "setup.ps1, update.ps1, .copier-answers.yml, .coveragerc, .env, .flake8, .gitattributes, package.json, pyrightconfig.json, pytest.ini, .pytest_cache",
+    ".nest_tools_config": "setup.ps1, update.ps1, .copier-answers.yml, .coveragerc, .env, .flake8, .gitattributes, package.json, pyrightconfig.json, pytest.ini, .pytest_cache, .sourcery.yaml",
     ".nest_md": "*.md, LICENSE"
   },
 
@@ -74,7 +74,8 @@
     "pyrightconfig.json": "jsonc",
     "*requirements*.txt": "pip-requirements",
     ".nest_md": "plaintext",
-    ".nest_tools_config": "plaintext"
+    ".nest_tools_config": "plaintext",
+    ".sourcery.yaml": "yaml"
   },
 
   //* File icon associations
