--- a/template/.github/workflows/bump.yml.jinja
+++ b/template/.github/workflows/bump.yml.jinja
@@ -5,6 +5,9 @@ on:
   push:
     branches: [main]
     paths: [requirements.txt]
+  pull_request:
+    branches: [main]
+    paths: [requirements.txt]
 
 jobs:
   bump:
@@ -14,7 +17,7 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: "{{ python_version }}"
-      - run: bash .tools/scripts/cicd_setup.sh
+      - run: pip install -U pip setuptools wheel -r .tools/requirements/requirements_cicd.txt
       - run: python .tools/scripts/bump_pyproject.py
       - uses: stefanzweifel/git-auto-commit-action@v4.14.0
         with:
