Propagate `boilerdata` changes back into template Fixes #132

--- a/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
@@ -62,7 +62,7 @@
     "*.tsx": "${capture}.ts",
     "tsconfig.json": "tsconfig.*.json",
     "package.json": "package-lock.json, yarn.lock",
-    ".nest_tools_config": "setup.ps1, update.ps1, .copier-answers.yml, .coveragerc, .env, .flake8, .gitattributes, package.json, pyrightconfig.json, pytest.ini, .pytest_cache, .sourcery.yaml",
+    ".nest_tools_config": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, .codecov.yml, .copier-answers.yml, .coverage, .coveragerc, .env, .flake8, .gitattributes, .isort.cfg, .pre-commit-config.yaml, package.json, pyrightconfig.json, pytest.ini, .pytest_cache, .sourcery.yaml",
     ".nest_md": "*.md, LICENSE"
   },
 
