--- a/template/{% if not override_pyrightconfig %}pyrightconfig.json{% endif %}.jinja
+++ b/template/{% if not override_pyrightconfig %}pyrightconfig.json{% endif %}.jinja
@@ -1,6 +1,8 @@
 {
   "ignore": [".tools"],
-  "include": ["src", "examples"],
+  "include": ["src"],
+  "extraPaths": ["tests", "examples"],
+  "typeCheckingMode": "strict",
   "reportMissingParameterType": "none",
   "reportMissingTypeStubs": "none",
   "reportUnknownArgumentType": "none",
@@ -8,7 +10,7 @@
   "reportUnknownMemberType": "none",
   "reportUnknownParameterType": "none",
   "reportUnknownVariableType": "none",
-  "typeCheckingMode": "strict",
+  "reportUntypedBaseClass": "none",
   "useLibraryCodeForTypes": false,
   "reportUnnecessaryTypeIgnoreComment": true
 }
