--- a/template/.github/workflows/changerelease.yml.jinja
+++ b/template/.github/workflows/changerelease.yml.jinja
@@ -12,5 +12,5 @@ jobs:
     steps:
       - uses: dropseed/changerelease@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: {% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}
           tag_prefix: ""
