--- a/template/update.ps1.jinja
+++ b/template/update.ps1.jinja
@@ -1,5 +1,5 @@
 .venv/Scripts/activate
-pip install -U pip  # throws [WinError 5], but still works on its own
+python -m pip install -U pip  # instructed to do this by pip
 pip install -U setuptools wheel  # must be done separately from above
 pip install -U -r .tools/requirements/requirements_dev.txt
 pip uninstall -y {{ project_name }}
