--- a/template/setup.ps1.jinja
+++ b/template/setup.ps1.jinja
@@ -1,4 +1,4 @@
 copier -f -r {{ _commit }}
 Remove-Item .venv -Recurse -ErrorAction SilentlyContinue
 py -{{ python_version }} -m venv .venv --upgrade-deps
-. .tools/setup/update.ps1
+. update.ps1
