--- a/template/{% if not override_gitignore %}.gitignore{% endif %}.jinja
+++ b/template/{% if not override_gitignore %}.gitignore{% endif %}.jinja
@@ -7,11 +7,10 @@
 # * TEMPLATE-SPECIFIC
 # *
 
+# To avoid committing profiler results
+*.prof
 # To avoid committing rejected changes upon bumping template
 *.rej
-# Only needed in dev environments
-pythonrc.py
-.nest_*
 # Don't commit this duplicate of our answers. It's only used once on project creation.
 .copier-answers-init.yml
 # Don't commit code workspace files, which might be symlinked here
