--- a/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
@@ -23,6 +23,7 @@
   //* pytest
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
+  "python.testing.pytestArgs": ["-c", "pytest_local.ini"],
 
   //* markdownlint
   "markdownlint.config": {
@@ -62,7 +63,7 @@
     "*.tsx": "${capture}.ts",
     "tsconfig.json": "tsconfig.*.json",
     "package.json": "package-lock.json, yarn.lock",
-    ".nest_tools_config": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, .codecov.yml, .copier-answers.yml, .coverage, .coveragerc, .env, .flake8, .gitattributes, .isort.cfg, .pre-commit-config.yaml, package.json, pyrightconfig.json, pytest.ini, .pytest_cache, .sourcery.yaml",
+    ".nest_tools_config": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, .flake8, .gitattributes, .isort.cfg, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, package.json, pyrightconfig.json, pytest.ini, pytest_local.ini, pythonrc.py",
     ".nest_md": "*.md, LICENSE"
   },
 
@@ -111,6 +112,12 @@
 
   //* Markdown editor moves jarringly when this is "true"
   "markdown.preview.scrollEditorWithPreview": false,
+
+  //* Show line numbers in notebooks
+  "notebook.lineNumbers": "on",
+
+  //* Unify *.ipynb working directory with typical/default *.py working directory
+  "jupyter.notebookFileRoot": "${workspaceFolder}",
 
   //! Line-width
 
