Nothing is ignored so we can avoid calling copier in the setup script.

--- a/template/setup.ps1.jinja
+++ b/template/setup.ps1.jinja
@@ -1,4 +1,2 @@
-copier -f -r {{ _commit }}
-Remove-Item .venv -Recurse -ErrorAction SilentlyContinue
-py -{{ python_version }} -m venv .venv --upgrade-deps
+py -{{ python_version }} -m venv .venv --clear --upgrade-deps
 . ./update.ps1
