--- a/template/setup.ps1.jinja
+++ b/template/setup.ps1.jinja
@@ -1,2 +1,7 @@
-py -{{ python_version }} -m venv .venv --clear --upgrade-deps
+$GLOBAL_PYTHON = 'py -{{ python_version }}'
+try { Invoke-Expression $("$GLOBAL_PYTHON --version") } catch [System.Management.Automation.CommandNotFoundException] { $GLOBAL_PYTHON = 'python{{ python_version }}' }
+Remove-Item -ErrorAction SilentlyContinue -Recurse -Force .venv
+Invoke-Expression "$GLOBAL_PYTHON -m venv .venv --upgrade-deps"
 . ./update.ps1
+pre-commit install
+pre-commit
