--- a/template/{% if not override_precommit %}.pre-commit-config.yaml{% endif %}.jinja
+++ b/template/{% if not override_precommit %}.pre-commit-config.yaml{% endif %}.jinja
@@ -37,7 +37,7 @@ repos:
     rev: "5.10.1"
     hooks:
       - id: isort
-  {% if use_dvc %}
+  {% if use_dvc -%}
   - repo: https://github.com/iterative/dvc
     rev: "2.18.0"
     hooks:
