Remove `pytest_local.ini`

--- a/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
@@ -74,7 +74,7 @@
       "label": "task: pytest-cov: Generate coverage",
       "type": "process",
       "command": "pwsh",
-      "args": ["-Command", "pytest -c pytest_local.ini --cov --cov-report xml"],
+      "args": ["-Command", "pytest --cov --cov-report xml"],
       "problemMatcher": []
     },
     {
