Change Jupyter settings

--- a/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
@@ -116,12 +116,6 @@
   //* Markdown editor moves jarringly when this is "true"
   "markdown.preview.scrollEditorWithPreview": false,
 
-  //* Show line numbers in notebooks
-  "notebook.lineNumbers": "on",
-
-  //* Unify *.ipynb working directory with typical/default *.py working directory
-  "jupyter.notebookFileRoot": "${workspaceFolder}",
-
   //! Line-width
 
   //* Formatting
@@ -182,5 +176,8 @@
   "[yaml]": {
     "editor.defaultFormatter": "redhat.vscode-yaml",
     "editor.wordWrap": "wordWrapColumn"
-  }
+  },
+
+  //! Extension: Jupyter Notebooks
+  "jupyter.notebookFileRoot": "${workspaceFolder}"
 }
