--- a/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
@@ -135,7 +135,7 @@
 
   //* MD
   "[markdown]": {
-    "editor.defaultFormatter": "DavidAnson.vscode-markdownlint",
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.wordWrap": "wordWrapColumn",
     //? Roughly matches the width of GitHub Markdown
     "editor.wordWrapColumn": 124,
