Configure default formatter for Python

--- a/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
@@ -164,6 +164,11 @@
     "editor.wordWrap": "wordWrapColumn"
   },
 
+  //* PYTHON
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter"
+  },
+
   //* TOML
   "evenBetterToml.formatter.columnWidth": 88,
   "[toml]": {
