Change YAML formatter to Prettier

--- a/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
@@ -185,7 +185,7 @@
   //* YAML
   "yaml.format.printWidth": 88,
   "[yaml]": {
-    "editor.defaultFormatter": "redhat.vscode-yaml",
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.wordWrap": "wordWrapColumn"
   },
 
