Add documentation preview task

--- a/template/{% if not override_gitignore %}.gitignore{% endif %}.jinja
+++ b/template/{% if not override_gitignore %}.gitignore{% endif %}.jinja
@@ -24,6 +24,8 @@ typings
 .copier-answers-init.yml
 # Don't commit code workspace files, which might be symlinked here
 *.code-workspace
+# Avoid committing local docs builds for previewing
+_site
 
 # * -------------------------------------------------------------------------------- * #
 # * Partial Node.gitignore
