Format notebooks with black

--- a/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
@@ -139,6 +139,11 @@
 
   //! Filetype specifics (incl. line width)
 
+  //* IPYNB
+  "[ipynb]": {
+    "editor.defaultFormatter": "ms-python.black-formatter"
+  },
+
   //* MD
   "[markdown]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
