Change default isort source paths

--- a/template/{% if not override_isort %}.isort.cfg{% endif %}.jinja
+++ b/template/{% if not override_isort %}.isort.cfg{% endif %}.jinja
@@ -6,4 +6,4 @@ known_first_party = {{ project_name }}
 profile = black
 py_version = 310
 skip_gitignore = true
-src_paths = src, tests, examples
+src_paths = src, tests
