Make docs preview/build task name more descriptive

--- a/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
@@ -54,7 +54,7 @@
     // * OTHER TASKS * //
 
     {
-      "label": "task: sphinx-autobuild",
+      "label": "task: sphinx-autobuild docs (preview)",
       "type": "process",
       "command": "pwsh",
       "args": ["-Command", "sphinx-autobuild docs _site"],
