--- a/template/{% if not override_precommit %}.pre-commit-config.yaml{% endif %}.jinja
+++ b/template/{% if not override_precommit %}.pre-commit-config.yaml{% endif %}.jinja
@@ -24,7 +24,7 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
   - repo: https://github.com/PyCQA/autoflake
-    rev: "v1.4"
+    rev: "v2.0.0"
     hooks:
       - id: autoflake
         args: [-i, --remove-all-unused-imports, --ignore-init-module-imports]
@@ -32,10 +32,20 @@ repos:
     hooks:
       - id: black
     rev: "22.12.0"
+  - repo: https://github.com/asottile/blacken-docs
+    rev: "v1.12.1"
+    hooks:
+      - id: blacken-docs
+        additional_dependencies: ["black==22.12.0"]
   - repo: https://github.com/PyCQA/isort
     rev: "v5.11.3"
     hooks:
       - id: isort
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.2.2
+    hooks:
+      - id: pyupgrade
+        args: [--py310-plus]
   {% if use_dvc -%}
   - repo: https://github.com/iterative/dvc
     rev: "2.38.1"
