--- a/template/{% if not override_precommit %}.pre-commit-config.yaml{% endif %}.jinja
+++ b/template/{% if not override_precommit %}.pre-commit-config.yaml{% endif %}.jinja
@@ -1,9 +1,3 @@
-files: |
-  (?x)^(
-      src/.*
-      |tests/.*
-  )$
-
 # Note: Can't use anything in `.venv` for local hooks when commiting from VSCode GUI.
 # This is because VSCode Source Control doesn't activate `.venv` before running `git
 # commit`.
@@ -32,20 +26,24 @@ repos:
     hooks:
       - id: black
     rev: "22.12.0"
-  - repo: https://github.com/asottile/blacken-docs
-    rev: "v1.12.1"
-    hooks:
-      - id: blacken-docs
-        additional_dependencies: ["black==22.12.0"]
   - repo: https://github.com/PyCQA/isort
     rev: "v5.11.3"
     hooks:
       - id: isort
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.3.1
+    rev: "v3.3.1"
     hooks:
       - id: pyupgrade
         args: [--py310-plus]
+  - repo: https://github.com/asottile/blacken-docs
+    rev: "v1.12.1"
+    hooks:
+      - id: blacken-docs
+        additional_dependencies: ["black==22.12.0"]
+  - repo: https://github.com/DavidAnson/markdownlint-cli2
+    rev: "v0.5.1"
+    hooks:
+      - id: markdownlint-cli2-fix
   {% if use_dvc -%}
   - repo: https://github.com/iterative/dvc
     rev: "2.38.1"
