--- a/template/{% if not override_isort %}.isort.cfg{% endif %}.jinja
+++ b/template/{% if not override_isort %}.isort.cfg{% endif %}.jinja
@@ -4,6 +4,6 @@ force_sort_within_sections = true
 group_by_package = true
 known_first_party = {{ project_name }}
 profile = black
-py_version = 310
+py_version = {{ python_version | replace(".", "") }}
 skip_gitignore = true
 src_paths = src, tests
