--- a/template/.github/workflows/changerelease.yml.jinja
+++ b/template/.github/workflows/changerelease.yml.jinja
@@ -8,7 +8,7 @@ on:
 
 jobs:
   sync:
-    runs-on: ubuntu-20.04
+    runs-on: {{ actions_runner }}
     steps:
       - uses: dropseed/changerelease@v1
         with:
