--- a/template/.github/workflows/codeql-analysis.yml.jinja
+++ b/template/.github/workflows/codeql-analysis.yml.jinja
@@ -7,7 +7,7 @@ on:
 jobs:
   analyze:
     name: Analyze
-    runs-on: ubuntu-latest
+    runs-on: {{ actions_runner }}
 
     strategy:
       fail-fast: false
