--- a/template/.github/workflows/publish.yml.jinja
+++ b/template/.github/workflows/publish.yml.jinja
@@ -8,7 +8,7 @@ on:
 
 jobs:
   publish:
-    runs-on: ubuntu-20.04
+    runs-on: {{ actions_runner }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
