--- a/template/.github/workflows/bump.yml.jinja
+++ b/template/.github/workflows/bump.yml.jinja
@@ -8,12 +8,12 @@ on:
 
 jobs:
   bump:
-    runs-on: {{ actions_runner }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "{{ python_version }}"
+          python-version:
       - run: python -m pip install -U pip
       - run: pip install -U setuptools wheel
       - run: pip install -r .tools/requirements/requirements_cicd.txt
