--- a/template/.github/workflows/bump_template.yml.jinja
+++ b/template/.github/workflows/bump_template.yml.jinja
@@ -1,23 +1,23 @@
-name: bump_template
+name: "bump_template"
 
 on:
   workflow_dispatch:
   pull_request:
-    branches: [main]
-    paths: [.gitmodules]
+    branches: ["main"]
+    paths: [".gitmodules"]
 
 jobs:
   bump:
-    runs-on: {{ actions_runner }}
+    runs-on: "{{ actions_runner }}"
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: "actions/checkout@v3"
+      - uses: "actions/setup-python@v4"
         with:
           python-version: "{{ python_version }}"
-      - run: python -m pip install -U pip
-      - run: pip install -U setuptools wheel
-      - run: pip install copier
-      - run: copier -f
-      - uses: stefanzweifel/git-auto-commit-action@v4.16.0
+      - run: "python -m pip install -U pip"
+      - run: "pip install -U setuptools wheel"
+      - run: "pip install copier"
+      - run: "copier -f"
+      - uses: "stefanzweifel/git-auto-commit-action@v4.16.0"
         with:
-          commit_message: Bump copier-python template
+          commit_message: "Bump copier-python template"
