--- a/template/.github/workflows/changerelease.yml.jinja
+++ b/template/.github/workflows/changerelease.yml.jinja
@@ -1,16 +1,16 @@
-name: changerelease
+name: "changerelease"
 on:
   workflow_dispatch: {}
   push:
-    paths: [CHANGELOG.md]
-    branches: [main]
+    paths: ["CHANGELOG.md"]
+    branches: ["main"]
     tags: ["*"]
 
 jobs:
   sync:
-    runs-on: {{ actions_runner }}
+    runs-on: "{{ actions_runner }}"
     steps:
-      - uses: dropseed/changerelease@v1
+      - uses: "dropseed/changerelease@v1"
         with:
-          github_token: {% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}
+          github_token: "{% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}"
           tag_prefix: ""
