--- a/template/.github/workflows/codeql-analysis.yml.jinja
+++ b/template/.github/workflows/codeql-analysis.yml.jinja
@@ -1,27 +1,27 @@
-name: CodeQL
+name: "CodeQL"
 
 on:
   schedule:
-    - cron: 38 16 * * 4
+    - cron: "38 16 * * 4"
 
 jobs:
   analyze:
-    name: Analyze
-    runs-on: {{ actions_runner }}
+    name: "Analyze"
+    runs-on: "{{ actions_runner }}"
 
     strategy:
       fail-fast: false
       matrix:
-        language: [python]
+        language: ["python"]
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3.2.0
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
+      - name: "Checkout repository"
+        uses: "actions/checkout@v3.2.0"
+      - name: "Initialize CodeQL"
+        uses: "github/codeql-action/init@v2"
         with:
-          languages: {% raw %}${{ matrix.language }}{% endraw %}
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v2
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2
+          languages: "{% raw %}${{ matrix.language }}{% endraw %}"
+      - name: "Autobuild"
+        uses: "github/codeql-action/autobuild@v2"
+      - name: "Perform CodeQL Analysis"
+        uses: "github/codeql-action/analyze@v2"
