--- a/template/.github/workflows/bump.yml.jinja
+++ b/template/.github/workflows/bump.yml.jinja
@@ -14,9 +14,10 @@ jobs:
       - uses: "actions/setup-python@v4"
         with:
           python-version: "{{ python_version }}"
-      - run: "python -m pip install -U pip"
-      - run: "pip install -U setuptools wheel"
-      - run: "pip install -r .tools/requirements/requirements_cicd.txt"
+      # Duplicates some logic to avoid dependency cycle
+      - run: >-
+          pip install -U pip setuptools wheel
+          pip install -r .tools/requirements/requirements_cicd.txt
       - run: "python .tools/scripts/bump_pyproject.py"
       - uses: "stefanzweifel/git-auto-commit-action@v4.16.0"
         with:
