--- a/template/.github/workflows/bump_template.yml.jinja
+++ b/template/.github/workflows/bump_template.yml.jinja
@@ -14,10 +14,11 @@ jobs:
       - uses: "actions/setup-python@v4"
         with:
           python-version: "{{ python_version }}"
-      - run: "python -m pip install -U pip"
-      - run: "pip install -U setuptools wheel"
-      - run: "pip install copier"
-      - run: "copier -f"
+      - run: >-
+          python -m pip install -U pip
+          pip install -U setuptools wheel
+          pip install copier
+          copier -f
       - uses: "stefanzweifel/git-auto-commit-action@v4.16.0"
         with:
-          commit_message: "Bump copier-python template"
+          commit_message: "Bump `copier-python` template"
