--- a/template/.github/workflows/main.yml.jinja
+++ b/template/.github/workflows/main.yml.jinja
@@ -11,28 +11,24 @@ jobs:
   flake8:
     runs-on: "{{ actions_runner }}"
     steps:
-      - uses: "./.github/workflows/common.yml"
+      - uses: "blakeNaccarato/copier-python-workflow-setup@v0.0.7"
+        with:
+          python-version: "{{ python_version }}"
       - run: "flake8"
 
   pyright:
     runs-on: "{{ actions_runner }}"
     steps:
-      - uses: "actions/checkout@v3"
-        with:
-          submodules: true
-      - uses: "actions/setup-python@v4"
+      - uses: "blakeNaccarato/copier-python-workflow-setup@v0.0.7"
         with:
           python-version: "{{ python_version }}"
-      - run: "bash .tools/scripts/cicd_setup.sh"
       - run: "pyright"
 
   pytest-cov:
     runs-on: "{{ actions_runner }}"
     steps:
-      - uses: "actions/checkout@v3"
-      - uses: "actions/setup-python@v4"
+      - uses: "blakeNaccarato/copier-python-workflow-setup@v0.0.7"
         with:
           python-version: "{{ python_version }}"
-      - run: "bash .tools/scripts/cicd_setup.sh"
       - run: "pytest --cov"
       - uses: "codecov/codecov-action@v3.1.1"
